2012-02-22  Joseph Myers  <joseph@codesourcery.com>

	[BZ #2548]
	* sysdeps/ieee754/flt-32/s_rintf.c (__rintf): Do not manipulate
	bits before adding and subtracting TWO23[sx].
	* math/libm-test.inc (rint_test): Add more tests.
	(rint_test_tonearest): Likewise.
	(rint_test_towardzero): Likewise.
	(rint_test_downward): Likewise.
	(rint_test_upward: Likewise.

2012-02-22  Joseph Myers  <joseph@codesourcery.com>

	[BZ #10110]
	* include/stdc-predef.h: New file.  Extracted from features.h.
	* include/features.h: Include stdc-predef.h.
	* Makefile (headers): Add stdc-predef.h.
	* CONFORMANCE (Compiler limitations): Update.

2012-02-22  Joseph Myers  <joseph@codesourcery.com>

	* manual/libc.texinfo (VERSION, UPDATED): Revert.

2012-02-21  David S. Miller  <davem@davemloft.net>

	* sysdeps/sparc/sparc32/fpu/libm-test-ulps: More jn test ULP updates.
	* sysdeps/sparc/sparc64/fpu/libm-test-ulps: Likewise.

2012-02-20  David S. Miller  <davem@davemloft.net>

	* sysdeps/sparc/sparc32/__longjmp.S: Unwind in the 'thread' path
	using a normal save/restore sequence, rather than allocating a
	dummy stack frame just to store a frame pointer and restore.
	* sysdeps/unix/sysv/linux/sparc/sparc32/____longjmp_chk.S: Likewise.

2012-02-21  Joseph Myers  <joseph@codesourcery.com>

	* manual/install.texi: Fix stray word in line-wrapped comment.

2012-02-20  David S. Miller  <davem@davemloft.net>

	* sysdeps/sparc/elf/configure.in (PI_STATIC_AND_HIDDEN): Define if
	both binutils and gcc support GOTDATA.

	* sysdeps/unix/sparc/sysdep.h: Document why we don't use
	"rd %pc" in the PIC register setup sequences.

	* sysdeps/sparc/crti.S: Try to use GOTDATA relocs.
	* sysdeps/sparc/sparc32/dl-machine.h (RTLD_START): Likewise.
	* sysdeps/sparc/sparc32/elf/start.S: Likewise.
	* sysdeps/sparc/sparc64/dl-machine.h (RTLD_START): Likewise.
	* sysdeps/sparc/sparc64/elf/start.S: Likewise.
	* sysdeps/sparc/sparc64/multiarch/memcpy.S: Likewise.
	* sysdeps/sparc/sparc64/multiarch/memset.S: Likewise.